force-app/main/default/objects/ADM_Theme_Assignment__c/ADM_Theme_Assignment__c.object-meta.xml
<CustomObject>
    <label>Theme Assignment</label>
    <nameField>
        <displayFormat>THA-{0000}</displayFormat>
        <label>Theme Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Theme Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>