force-app/main/default/objects/ADM_Theme_Assignment__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Theme</label>
    <referenceTo>ADM_Theme__c</referenceTo>
    <relationshipLabel>Theme Assignments</relationshipLabel>
    <relationshipName>Theme_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>