force-app/main/default/objects/ADM_Theme_Assignment__c/fields/Theme_Work_Key__c.field-meta.xml
<CustomField>
    <fullName>Theme_Work_Key__c</fullName>
    <description>Used to enforce uniqueness of the theme assignment. This is automatically populated in the trigger.</description>
    <label>Theme Work Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>